
             • Multicore processing now also supports Windows (#47)

             • Fixed a bug where manually specifying the number of CPU
               cores via 'method.control = list(cores = x)' was not
               respected,

             • mixing of curves (e.g., regenerated first, natural
               second) led to a crash of the function, even the new
               structure was correctly specified; fixed (#61).

         • ‘calc_Kars2008()’

             • In some cases the calculated LxTx values of the
               simulated natural dose response curve were slightly
               underestimated and its maximum value differed from the
               individually calculated nN(ss) value. The approach to
               calculate the natural DRC was changed and now yields a
               maximum LxTx value indistinguishable from nN(ss).

             • Numeric output in the plot should now always be inside
               the plotting frame.

             • The number of digits for the numeric output in the plot
               was slightly adjusted.

         • ‘plot_FilterCombinations()’

             • Add interactive mode (‘interactive = TRUE’)

         • ‘plot_GrowthCurve()’

             • The function now turns ‘Inf’ into ‘NA’,

             • the argument ‘na.rm’ is defunct and should not be used
               anymore,

             • minor code modifications to handle special cases such as
               input values with a ‘data.frame’ with no error column,

             • extent examples by for test data set by Berger & Huntley
               (1989).

         • ‘plot_Historgram()’

             • The forwarded argument ‘breaks’ was not treated
               correctly (#54); fixed.

         • ‘plot_RLum()’

             • The function now supports plotting even of highly nested
               lists of `RLum-objects`.

         • ‘plot_RLum.Analysis()’

             • The option `col` was not working as expected if `black`